[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/PlayerAnimation/magi_idle_sheet.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/player_temp2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/light1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/cast/cast2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/cast/cast3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/cast/cast1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/cast/cast4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/cast/cast5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/PlayerAnimation/magi_run_sheet.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 10 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 10 )
region = Rect2( 10, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 20, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 30, 0, 10, 10 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "AirTap",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "cast",
"speed": 15.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 2.5, 5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.15
color = Color( 0.964706, 0.964706, 0.964706, 1 )
mode = 2
shadow_enabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="ShootingPosition" type="Position2D" parent="."]
position = Vector2( 20, 0 )

[node name="ShootTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
